--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <!-- meta description -->
+        <meta description="A passionate and ethusiastic Web Developer, who strives for continuous growth">
         <!-- favicons -->
         <link rel="icon" href="favicon.ico" sizes="any"> 
         <link rel="icon" href="favicon.svg" type="image/svg+xml">
@@ -41,10 +42,11 @@
                 <ul>
                     <li><a href="#top"><img src="./images/logo-001-menu.png" id="menu-home-logo"></a></li>
                     <li><a href="#about">
-                        <span class="material-symbols-outlined">
-                        arrow_downward_alt
-                        </span>
-                        who?</a>
+                            <span class="material-symbols-outlined">
+                            arrow_downward_alt
+                            </span>
+                            who?
+                        </a>
                     </li>
                     <li><a href="#projects">
                         <span class="material-symbols-outlined">
@@ -68,7 +70,7 @@
                 <div>
                     <header>
                         <div class="welcome">
-                            <h1>Welcome!</h1>
+                            <h2>Welcome!</h2>
                         </div>
                         <!-- code frmo https://codepen.io/amit_sheen/pen/mdmJNYz -->
                         <div class="platform">
@@ -93,11 +95,6 @@
                               <div class="panel"></div>
                             </div>
                           </div>
-
-                          <div class="home-text">
-                            <p>Thank you for visiting.</p>
-                            <p>You can navigate the site by using the menu below.</p>
-                          </div>
                     </header>
                 </div>
 
@@ -114,21 +111,28 @@
 
                         <div class="swiper-slide">
                             <div class="container">
-                                <h2>who am i?</h2>
-                                <p>As a web developer with a certificate in front-end web development from British Columbia Institute of Technology, I am dedicated to crafting immersive digital experiences that combine creativity with functionality. With a passion for design, accessibility, and continuous learning, I am committed to delivering high-quality projects that exceed client expectations. Eager to contribute my expertise to innovative web development projects and collaborate with like-minded professionals in creating impactful digital solutions.</p>
+                                <div>
+                                    <h2>who am i?</h2>
+                                </div>
+                                <div>
+                                    <p>As a web developer with a certificate in front-end web development from British Columbia Institute of Technology, I am dedicated to crafting immersive digital experiences that combine creativity with functionality. With a passion for design, accessibility, and continuous learning, I am committed to delivering high-quality projects that exceed client expectations. Eager to contribute my expertise to innovative web development projects and collaborate with like-minded professionals in creating impactful digital solutions.</p>
+                                </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="container">
+                                <div>
+                                    <h2>what can i do?</h2>
+                                    <p>Below is the array of technologies with which I have hands-on experience.</p>
+                                </div>
 
-                                <h2>what can i do?</h2>
-                                <p>Below is the array of technologies with which I have hands-on experience.</p>
-
-                                <div class="technogies">
+                                <div class="technologies">
                                     <p>
                                         <i class="devicon-html5-plain-wordmark"></i>
                                         <i class="devicon-css3-plain"></i>
                                         <i class="devicon-sass-original colored"></i>
+                                    </p>
+                                    <p>
                                         <i class="devicon-javascript-plain"></i>
                                         <i class="devicon-react-original-wordmark"></i>
                                         <i class="devicon-php-plain"></i>
@@ -138,6 +142,8 @@
                                         <i class="devicon-npm-original-wordmark"></i>
                                         <i class="devicon-mysql-original"></i>
                                         <i class="devicon-photoshop-plain"></i>
+                                    </p>
+                                    <p>
                                         <i class="devicon-illustrator-plain"></i>
                                         <i class="devicon-xd-plain"></i>
                                         <i class="devicon-figma-plain"></i>
@@ -148,8 +154,13 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="container">
-                                <h2>what are my interests?</h2>
-                                <p>Outside of the digital realm, I find joy in a variety of passions. From experimenting with new recipes in the kitchen to taking leisurely strolls with my furry companions, I embrace the culinary and outdoorsy sides of life. Music is another love of mine, whether it's belting out tunes or dancing to the rhythm. Constantly seeking growth, I thrive on learning new skills and knowledge, ensuring that every day brings fresh experiences and insights.</p>
+                                <div>
+                                    <h2>what are my interests?</h2>
+                                </div>
+                                <div>
+                                    <p>Outside of the digital realm, I find joy in a variety of passions. From experimenting with new recipes in the kitchen to taking leisurely strolls with my furry companions, I embrace the culinary and outdoorsy sides of life. Music is another love of mine, whether it's belting out tunes or dancing to the rhythm. Constantly seeking growth, I thrive on learning new skills and knowledge, ensuring that every day brings fresh experiences and insights.</p>
+                                </div>
+
                             </div>
                         </div>
 
@@ -182,8 +193,8 @@
                     </div>
 
                     <div class="project" id="project-2">
-                        <a href="single-project-1.html">
-                            <img src="./images/sm-home-desktop.png" alt="project image" loading="lazy">
+                        <a href="single-project-2.html">
+                            <img src="./images/petretreat-img/homepage-desktop.png" alt="project image" loading="lazy">
                             <p>
                                 <i class="devicon-wordpress-plain-wordmark"></i>
                                 <i class="devicon-sass-original colored"></i>
@@ -194,8 +205,8 @@
                     </div>
 
                     <div class="project" id="project-3">
-                        <a href="single-project-1.html">
-                            <img src="./images/sm-home-desktop.png" alt="project image" loading="lazy">
+                        <a href="single-project-3.html">
+                            <img src="./images/portfolio-img/single-project-desktop.png" alt="project image" loading="lazy">
                             <p>
                                 <i class="devicon-html5-plain-wordmark"></i>
                                 <i class="devicon-sass-original colored"></i>
@@ -212,21 +223,20 @@
                 <div>
                     <header>
                         <h2>link up with me</h2>
-                        <p>You can check out my GitHub repositories as well as shoot me a message on LinkedIn or e-mail me.</p>
-                        <p>Can't wait to hear from you. :)</p>
                     </header>
-                    <div class="social-icons">
-                        <a href="https://github.com/supercheese99" target="_blank" rel="noopener noreferrer" id="icon-1">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="4em" height="4em" viewBox="0 0 24 24"><path fill="currentColor" d="M5 2h4v2H7v2H5zm0 10H3V6h2zm2 2H5v-2h2zm2 2v-2H7v2H3v-2H1v2h2v2h4v4h2v-4h2v-2zm0 0v2H7v-2zm6-12v2H9V4zm4 2h-2V4h-2V2h4zm0 6V6h2v6zm-2 2v-2h2v2zm-2 2v-2h2v2zm0 2h-2v-2h2zm0 0h2v4h-2z"/></svg>
-                        </a>
-                        <a href="https://www.linkedin.com/in/oliwiawegner/" target="_blank" rel="noopener noreferrer" id="icon-2">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="4em" height="4em" viewBox="0 0 24 24"><path fill="currentColor" d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037c-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85c3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433a2.06 2.06 0 0 1-2.063-2.065a2.064 2.064 0 1 1 2.063 2.065m1.782 13.019H3.555V9h3.564zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0z"/></svg>
-                        </a>
-                        <a href="mailto:wegneroliwia@outlook.com" id="icon-3">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="4em" height="4em" viewBox="0 0 22 22"><path fill="currentColor" d="M1 5h1V4h18v1h1v13h-1v1H2v-1H1zm2 12h16V9h-1v1h-2v1h-2v1h-2v1h-2v-1H8v-1H6v-1H4V9H3zM19 6H3v1h2v1h2v1h2v1h4V9h2V8h2V7h2z"/></svg>
-                        </a>
-                    </div>
                 </div>
+                <div class="social-icons">
+                    <a href="https://github.com/supercheese99" target="_blank" rel="noopener noreferrer" id="icon-1">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="4em" height="4em" viewBox="0 0 24 24"><path fill="currentColor" d="M5 2h4v2H7v2H5zm0 10H3V6h2zm2 2H5v-2h2zm2 2v-2H7v2H3v-2H1v2h2v2h4v4h2v-4h2v-2zm0 0v2H7v-2zm6-12v2H9V4zm4 2h-2V4h-2V2h4zm0 6V6h2v6zm-2 2v-2h2v2zm-2 2v-2h2v2zm0 2h-2v-2h2zm0 0h2v4h-2z"/></svg>
+                    </a>
+                    <a href="https://www.linkedin.com/in/oliwiawegner/" target="_blank" rel="noopener noreferrer" id="icon-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="4em" height="4em" viewBox="0 0 24 24"><path fill="currentColor" d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037c-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85c3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433a2.06 2.06 0 0 1-2.063-2.065a2.064 2.064 0 1 1 2.063 2.065m1.782 13.019H3.555V9h3.564zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0z"/></svg>
+                    </a>
+                    <a href="mailto:wegneroliwia@outlook.com" id="icon-3">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="4em" height="4em" viewBox="0 0 22 22"><path fill="currentColor" d="M1 5h1V4h18v1h1v13h-1v1H2v-1H1zm2 12h16V9h-1v1h-2v1h-2v1h-2v1h-2v-1H8v-1H6v-1H4V9H3zM19 6H3v1h2v1h2v1h2v1h4V9h2V8h2V7h2z"/></svg>
+                    </a>
+                </div>
+
             </div>
 
         </main>
